--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,11 +3,7 @@
 
 name: student db build
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: push
 
 jobs:
   build:
